@@ -12,6 +12,7 @@
 - API Addition: Added setProgrammaticChangeEvents to ProgressBar/Slider.
 - Keyboard events working on RoboVM on iOS 13.5 and up, uses same API as on other platforms
 - API Addition: Added AndroidLiveWallpaper.notifyColorsChanged() to communicate visually significant colors back to the wallpaper engine.
+- API Change: AssetManager invokes the loaded callback when an asset is unloaded from the load queue if the asset is already loaded.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
